Made buttons' corners round using newly added drawable

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -30,8 +30,9 @@
         android:layout_marginStart="96dp"
         android:layout_marginTop="43dp"
         android:layout_marginEnd="96dp"
+        android:background="@drawable/round_corner_button"
         android:onClick="computeWaveSpeeds"
-        android:text="Compute Wave Speeds"
+        android:text="@string/compute_wave_speeds"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -46,6 +47,7 @@
         android:layout_marginBottom="339dp"
         android:onClick="SWE1D"
         android:text="SWE1D"
+        android:background="@drawable/round_corner_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/divider"
         app:layout_constraintHorizontal_bias="1.0"
@@ -76,6 +78,7 @@
         android:layout_marginTop="96dp"
         android:layout_marginEnd="96dp"
         android:layout_marginBottom="339dp"
+        android:background="@drawable/round_corner_button"
         android:onClick="SWE"
         android:text="SWE"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -103,7 +106,6 @@
         android:id="@+id/divider"
         android:layout_width="1dp"
         android:layout_height="729dp"
-        android:layout_marginTop="3dp"
         android:background="?android:attr/listDivider"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
