--- a/app/src/main/res/layout/acticity_swe1d.xml
+++ b/app/src/main/res/layout/acticity_swe1d.xml
@@ -49,25 +49,11 @@
         android:layout_marginBottom="199dp"
         android:onClick="start"
         android:text="Start"
+        android:background="@drawable/round_corner_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/swe1dtime" />
-
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/linearLayout"-->
-<!--        android:layout_width="fill_parent"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:layout_marginBottom="4dp"-->
-<!--        android:orientation="vertical"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/swe1size"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        tools:ignore="MissingConstraints">-->
-
-    <!--    </LinearLayout>-->
 
     <Spinner
         android:id="@+id/swe1d_scenario_spinner"
