--- a/app/src/main/res/layout/activity_swe.xml
+++ b/app/src/main/res/layout/activity_swe.xml
@@ -58,6 +58,7 @@
         android:layout_marginTop="50dp"
         android:onClick="start"
         android:text="Start"
+        android:background="@drawable/round_corner_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/swe_dirname" />
