--- a/app/src/main/res/layout/activity_wavespeed.xml
+++ b/app/src/main/res/layout/activity_wavespeed.xml
@@ -66,12 +66,15 @@
         android:layout_height="48dp"
         android:layout_marginTop="81dp"
         android:layout_marginBottom="251dp"
+        android:background="@drawable/round_corner_button"
         android:onClick="start"
         android:text="Get wave speeds"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/e4" />
+        app:layout_constraintTop_toBottomOf="@id/e4"
+        app:layout_constraintVertical_bias="0.354" />
 
     <TextView
         android:id="@+id/textView"
